external-crates/move/crates/move-compiler/tests/move_check/expansion/restricted_type_parameter_names.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E03011]: invalid use of reserved name
  ┌─ tests/move_check/expansion/restricted_type_parameter_names.move:4:9
  │
4 │         _,
  │         ^ Invalid type parameter name '_'. '_' is restricted and cannot be used to name a type parameter

error[E03011]: invalid use of reserved name
  ┌─ tests/move_check/expansion/restricted_type_parameter_names.move:5:9
  │
5 │         address,
  │         ^^^^^^^ Invalid type parameter name 'address'. 'address' is restricted and cannot be used to name a type parameter

error[E03011]: invalid use of reserved name
  ┌─ tests/move_check/expansion/restricted_type_parameter_names.move:6:9
  │
6 │         signer,
  │         ^^^^^^ Invalid type parameter name 'signer'. 'signer' is restricted and cannot be used to name a type parameter

error[E03011]: invalid use of reserved name
  ┌─ tests/move_check/expansion/restricted_type_parameter_names.move:7:9
  │
7 │         u8,
  │         ^^ Invalid type parameter name 'u8'. 'u8' is restricted and cannot be used to name a type parameter

error[E03011]: invalid use of reserved name
  ┌─ tests/move_check/expansion/restricted_type_parameter_names.move:8:9
  │
8 │         u16,
  │         ^^^ Invalid type parameter name 'u16'. 'u16' is restricted and cannot be used to name a type parameter

error[E03011]: invalid use of reserved name
  ┌─ tests/move_check/expansion/restricted_type_parameter_names.move:9:9
  │
9 │         u32,
  │         ^^^ Invalid type parameter name 'u32'. 'u32' is restricted and cannot be used to name a type parameter

error[E03011]: invalid use of reserved name
   ┌─ tests/move_check/expansion/restricted_type_parameter_names.move:10:9
   │
10 │         u64,
   │         ^^^ Invalid type parameter name 'u64'. 'u64' is restricted and cannot be used to name a type parameter

error[E03011]: invalid use of reserved name
   ┌─ tests/move_check/expansion/restricted_type_parameter_names.move:11:9
   │
11 │         u128,
   │         ^^^^ Invalid type parameter name 'u128'. 'u128' is restricted and cannot be used to name a type parameter

error[E03011]: invalid use of reserved name
   ┌─ tests/move_check/expansion/restricted_type_parameter_names.move:12:9
   │
12 │         u256,
   │         ^^^^ Invalid type parameter name 'u256'. 'u256' is restricted and cannot be used to name a type parameter

error[E03011]: invalid use of reserved name
   ┌─ tests/move_check/expansion/restricted_type_parameter_names.move:13:9
   │
13 │         vector,
   │         ^^^^^^ Invalid type parameter name 'vector'. 'vector' is restricted and cannot be used to name a type parameter

error[E03011]: invalid use of reserved name
   ┌─ tests/move_check/expansion/restricted_type_parameter_names.move:14:9
   │
14 │         freeze,
   │         ^^^^^^ Invalid type parameter name 'freeze'. 'freeze' is restricted and cannot be used to name a type parameter

error[E03011]: invalid use of reserved name
   ┌─ tests/move_check/expansion/restricted_type_parameter_names.move:15:9
   │
15 │         assert,
   │         ^^^^^^ Invalid type parameter name 'assert'. 'assert' is restricted and cannot be used to name a type parameter

error[E03011]: invalid use of reserved name
   ┌─ tests/move_check/expansion/restricted_type_parameter_names.move:16:9
   │
16 │         Self,
   │         ^^^^ Invalid type parameter name 'Self'. 'Self' is restricted and cannot be used to name a type parameter

error[E03011]: invalid use of reserved name
   ┌─ tests/move_check/expansion/restricted_type_parameter_names.move:19:9
   │
19 │         _,
   │         ^ Invalid type parameter name '_'. '_' is restricted and cannot be used to name a type parameter

error[E03011]: invalid use of reserved name
   ┌─ tests/move_check/expansion/restricted_type_parameter_names.move:20:9
   │
20 │         address,
   │         ^^^^^^^ Invalid type parameter name 'address'. 'address' is restricted and cannot be used to name a type parameter

error[E03011]: invalid use of reserved name
   ┌─ tests/move_check/expansion/restricted_type_parameter_names.move:21:9
   │
21 │         signer,
   │         ^^^^^^ Invalid type parameter name 'signer'. 'signer' is restricted and cannot be used to name a type parameter

error[E03011]: invalid use of reserved name
   ┌─ tests/move_check/expansion/restricted_type_parameter_names.move:22:9
   │
22 │         u8,
   │         ^^ Invalid type parameter name 'u8'. 'u8' is restricted and cannot be used to name a type parameter

error[E03011]: invalid use of reserved name
   ┌─ tests/move_check/expansion/restricted_type_parameter_names.move:23:9
   │
23 │         u16,
   │         ^^^ Invalid type parameter name 'u16'. 'u16' is restricted and cannot be used to name a type parameter

error[E03011]: invalid use of reserved name
   ┌─ tests/move_check/expansion/restricted_type_parameter_names.move:24:9
   │
24 │         u32,
   │         ^^^ Invalid type parameter name 'u32'. 'u32' is restricted and cannot be used to name a type parameter

error[E03011]: invalid use of reserved name
   ┌─ tests/move_check/expansion/restricted_type_parameter_names.move:25:9
   │
25 │         u64,
   │         ^^^ Invalid type parameter name 'u64'. 'u64' is restricted and cannot be used to name a type parameter

error[E03011]: invalid use of reserved name
   ┌─ tests/move_check/expansion/restricted_type_parameter_names.move:26:9
   │
26 │         u128,
   │         ^^^^ Invalid type parameter name 'u128'. 'u128' is restricted and cannot be used to name a type parameter

error[E03011]: invalid use of reserved name
   ┌─ tests/move_check/expansion/restricted_type_parameter_names.move:27:9
   │
27 │         u256,
   │         ^^^^ Invalid type parameter name 'u256'. 'u256' is restricted and cannot be used to name a type parameter

error[E03011]: invalid use of reserved name
   ┌─ tests/move_check/expansion/restricted_type_parameter_names.move:28:9
   │
28 │         vector,
   │         ^^^^^^ Invalid type parameter name 'vector'. 'vector' is restricted and cannot be used to name a type parameter

error[E03011]: invalid use of reserved name
   ┌─ tests/move_check/expansion/restricted_type_parameter_names.move:29:9
   │
29 │         freeze,
   │         ^^^^^^ Invalid type parameter name 'freeze'. 'freeze' is restricted and cannot be used to name a type parameter

error[E03011]: invalid use of reserved name
   ┌─ tests/move_check/expansion/restricted_type_parameter_names.move:30:9
   │
30 │         assert,
   │         ^^^^^^ Invalid type parameter name 'assert'. 'assert' is restricted and cannot be used to name a type parameter

error[E03011]: invalid use of reserved name
   ┌─ tests/move_check/expansion/restricted_type_parameter_names.move:31:9
   │
31 │         Self,
   │         ^^^^ Invalid type parameter name 'Self'. 'Self' is restricted and cannot be used to name a type parameter
